k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: stephengrider/multi-client
          resources:
            limits:
              memory: "128Mi"
              # m: milliCPU
              # 1000m is equivalent to 1 virtual (or physical if run on local machine) CPU core
              cpu: "100m"
          ports:
          - containerPort: 3000
