k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # connect pods and services created by cert-manager to our ingress
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    # always use https
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - sheepish-shiba.fyi
        - www.sheepish-shiba.fyi
      # name for the created Certificate secret
      secretName: sheepish-shiba-fyi-tls
  rules:
    - host: sheepish-shiba.fyi
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            # similar to an nginx `upstream`
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5001
    - host: www.sheepish-shiba.fyi
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            # similar to an nginx `upstream`
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5001
